[package]
name = "yedb"
version = "0.4.15"
authors = ["Serhij S. <div@altertech.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/alttch/yedb-rs"
description = "Rugged crash-free embedded and client/server key-value database"
readme = "README.md"
keywords = ["database", "server", "client", "key-value"]
autoexamples = false

[package.metadata.docs.rs]
features = ["client-sync", "client-async", "client-local-async", "client-busrt-async"]

[package.metadata.playground]
features = ["client-sync", "client-async", "client-local-async", "client-busrt-async"]

[lib]
name = "yedb"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35.1", features = ["full"], optional = true }
serde = { version =  "1.0", features = ["derive"] }
serde_repr = "0.1.7"
serde_json = "1.0"
serde_yaml = "0.8.15"
serde_cbor = "0.11.1"
rmp-serde = "1.0.0"
rmpv = "0.4.6"
fs2 = "0.4.3"
lru = "0.7.1"
glob = "0.3.0"
lazy_static = "1.4.0"
regex = "1"
hex = "0.4.2"
log = "0.4.14"
fs_extra = "1.2.0"
openssl = "0.10.62"
#byteorder = "1.4.2"
jsonschema = { version = "0.17.1", features = [] }
reqwest = "0.11.23" # for jsonschema
syslog = { version = "6.1.0", optional = true }
chrono = { version = "0.4.31", optional = true }
colored = { version = "2.1.0", optional = true }
getch = { version = "0.3.1", optional = true }
prettytable-rs = { version = "0.10.0", optional = true }
simple-pool = { version = "0.0.17", optional = true }
bma-benchmark = { version = "0.0.20", optional = true }
busrt = { version = "0.4", optional = true, features = ["rpc", "ipc"] }
async-trait = { version = "0.1.51", optional = true }
clap = { version = "4.4.12", features = ["derive"], optional = true }
is-terminal = { version = "0.4.10", optional = true }
bumpalo = { version = "3.14.0", optional = true }

[features]
server = ["syslog", "chrono", "colored", "clap", "tokio", "bumpalo"]
cli = ["chrono", "colored", "clap", "prettytable-rs", "getch", "bma-benchmark", "tokio", "client-async", "client-busrt-async", "client-local-async", "is-terminal", "bumpalo"]
client-sync = []
client-async = ["tokio", "simple-pool", "async-trait"]
client-busrt-async = ["busrt", "client-async", "async-trait"]
client-local-async = ["tokio", "client-async", "async-trait"]
busrt-rpc = ["async-trait", "busrt"]
server-embed = ["tokio"]
openssl-vendored = ["openssl/vendored"]

[[bin]]
name = "yedb-server"
path = "src/yedb-server.rs"
required-features = ["server"]

[[bin]]
name = "yedb-cli"
path = "src/yedb-cli.rs"
required-features = ["cli"]

[[example]]
name = "embed"
path = "examples/embed.rs"

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["client-sync"]

[profile.release]
strip = true
lto = true
codegen-units = 1

