[package]
name = "yedb"
version = "0.5.1"
authors = ["Serhij S. <div@altertech.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/alttch/yedb-rs"
description = "Rugged crash-free embedded and client/server key-value database"
readme = "README.md"
keywords = ["database", "server", "client", "key-value"]
autoexamples = false

[package.metadata.docs.rs]
features = ["client-sync", "client-async", "client-local-async", "client-busrt-async"]

[package.metadata.playground]
features = ["client-sync", "client-async", "client-local-async", "client-busrt-async"]

[lib]
name = "yedb"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.45", features = ["full"], optional = true }
serde = { version =  "1.0", features = ["derive"] }
serde_repr = "0.1.7"
serde_json = "1.0"
serde_yaml = { version =  "0.1.3", package = "serde_yaml2" }
rmp-serde = "1.3.1"
fs2 = "0.4.3"
lru = "0.7.1"
glob = "0.3.0"
regex = "1"
hex = "0.4.2"
log = "0.4.14"
fs_extra = "1.2.0"
openssl = "0.10"
#byteorder = "1.4.2"
jsonschema = { version = "0.28", features = [] }
syslog = { version = "6.1.0", optional = true }
chrono = { version = "0.4.31", optional = true }
colored = { version = "2.1.0", optional = true }
getch = { version = "0.3.1", optional = true }
prettytable-rs = { version = "0.10.0", optional = true }
simple-pool = { version = "0.0.17", optional = true }
bma-benchmark = { version = "0.0.20", optional = true }
busrt = { version = "0.5", optional = true, features = ["rpc", "ipc", "broker-rpc"] }
async-trait = { version = "0.1.51", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
is-terminal = { version = "0.4.10", optional = true }
bumpalo = { version = "3.14.0", optional = true }

[features]
server = ["dep:syslog", "dep:chrono", "dep:colored", "dep:clap", "dep:tokio", "dep:bumpalo", "busrt-rpc"]
cli = ["dep:chrono", "dep:colored", "dep:clap", "dep:prettytable-rs", "dep:getch",
    "dep:bma-benchmark", "dep:tokio", "client-async", "client-busrt-async", "client-local-async",
    "dep:is-terminal", "dep:bumpalo"]
client-sync = []
client-async = ["dep:tokio", "dep:simple-pool", "dep:async-trait"]
client-busrt-async = ["dep:busrt", "client-async", "dep:async-trait"]
client-local-async = ["dep:tokio", "client-async", "dep:async-trait"]
busrt-rpc = ["dep:async-trait", "dep:busrt"]
server-embed = ["dep:tokio"]
openssl-vendored = ["openssl/vendored"]

[[bin]]
name = "yedb-server"
path = "src/yedb-server.rs"
required-features = ["server"]

[[bin]]
name = "yedb-cli"
path = "src/yedb-cli.rs"
required-features = ["cli"]

[[example]]
name = "embed"
path = "examples/embed.rs"

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["client-sync"]

[profile.release]
strip = true
lto = true
codegen-units = 1

