[package]
name = "yedb_common"
version = "0.0.1"
authors = ["Sergei S. <div@altertech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "0.15.1"
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.13"
hex = "0.4.2"
